--- a/jobpost/static/css/jobs.css
+++ b/jobpost/static/css/jobs.css
@@ -51,9 +51,11 @@
   margin: 0;
   display: inline-block;
   float: left;
-  border-bottom-style: solid;
-  border-bottom-color: #11274c;
+  border-bottom-style: dotted;
+  border-bottom-color: white;
+  border-width: 1px;
   font-size: 20px;
+  font-weight: bold;
 }
 
 #duration {
